--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,13 @@ set(GLEW_INCLUDE_DIRS "./common/glew-2.1.0/include")
 set(GLEW_LIBRARIES_DIRS "./common/glew-2.1.0/lib/Release/x64")
 
 set(GLFW_INCLUDE_DIRS "./common/glfw-3.3.8/include")
-set(GLFW_LIBRARIES_DIRS "./common/glfw-3.3.8/lib-vc2019/")
+set(GLFW_LIBRARIES_DIRS "./common/glfw-3.3.8/lib-vc2017/")
 
-include_directories(${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
-link_directories(${GLEW_LIBRARIES_DIRS} ${GLFW_LIBRARIES_DIRS})
+set(SOIL2_INCLUDE_DIRS "./common/soil2/include")
+set(SOIL2_LIBRARIES_DIRS "./common/soil2/lib/")
+
+include_directories(${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} ${SOIL2_INCLUDE_DIRS})
+link_directories(${GLEW_LIBRARIES_DIRS} ${GLFW_LIBRARIES_DIRS} ${SOIL2_LIBRARIES_DIRS})
 
 add_subdirectory(Chapter01)
 add_subdirectory(Chapter02)
